# silo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
docs/superpowers/plans/: 2026-06-03-multi-provider.md  2026-06-03-workload-decoupling.md
src/: cli.rs  config.rs  format.rs  lib.rs  main.rs  models.rs  ssh.rs  state.rs
src/providers/: arch.rs  mod.rs  vast.rs
src/workloads/: inference.rs  mining.rs  mod.rs
