[package]
name = "silo"
version = "0.1.0"
edition = "2024"
authors = ["Samuel K. Norton"]
license = "MIT OR Apache-2.0"
description = "Ephemeral GPU rental orchestration across providers"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
owo-colors = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
